argocd/11-getrecommendations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getrecommendations
spec:
  replicas: 1
  selector:
    matchLabels:
      service: getrecommendations
  template:
    metadata:
      labels:
        service: getrecommendations
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: getrecommendations
        image: registry.digitalocean.com/recgencr/getrecommendations:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
