argocd/8-submitevent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: submitevent
spec:
  replicas: 1
  selector:
    matchLabels:
      service: submitevent
  template:
    metadata:
      labels:
        service: submitevent
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: submitevent
        image: registry.digitalocean.com/recgencr/submitevent:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
