argocd/9-updaterecommendations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: updaterecommendations
spec:
  replicas: 1
  selector:
    matchLabels:
      service: updaterecommendations
  template:
    metadata:
      labels:
        service: updaterecommendations
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: updaterecommendations
          image: registry.digitalocean.com/recgencr/updaterecommendations:latest
          imagePullPolicy: Always
