argocd/0-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    service: redis
  ports:
  - name: redis
    port: 6379
