argocd/10-getrecommendations-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getrecommendations
spec:
  selector:
    service: getrecommendations
  ports:
  - name: getrecommendations
    port: 3000
