argocd/2-zookeeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    service: zookeeper
  ports:
  - name: "2181"
    port: 2181
