argocd/4-kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  clusterIP: None
  selector:
    service: kafka
  ports:
  - name: internal
    port: 29092
  - name: external
    port: 9092
