argocd/9-updaterecommendations-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: updaterecommendations
spec:
  selector:
    service: updaterecommendations
  ports:
  - name: updaterecommendations
    port: 3000
