argocd/6-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /v1/submitevent
            pathType: Prefix  
            backend:
              service:
                name: submitevent
                port:
                  number: 3000
