argocd/6-loadbalancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /v1/submitevent(/|$)(.*)
            pathType: Prefix  
            backend:
              service:
                name: submitevent
                port:
                  number: 3000
          - path: /v1/getrecommendations(/|$)(.*)
            pathType: Prefix  
            backend:
              service:
                name: getrecommendations
                port:
                  number: 3000
